Navigation fix overlapping text

--- a/style.css
+++ b/style.css
@@ -75,19 +75,19 @@
     margin-top: 10px;
     margin-right: 15px;
 }
-#navbar {
+.navigation {
     overflow: hidden;
     background-color: #3B3B3B;
     padding-right: 30px;
 }
-#navbar a.logo_text {
+.navigation a.logo_text {
     color: #00c6d7;
     padding-left: 60px;
     float: left;
     font-size: 20px;
 }
   
-#navbar a {
+.navigation ul a {
     float: right;
     display: block;
     color: #f2f2f2;
@@ -96,9 +96,10 @@
     text-decoration: none;
     font-weight: bold;
     font-size: 20px;
+    z-index: 1;
 }
  
-#navbar a:hover {
+.navigation ul a:hover {
     color: #00c6d7;
     font-weight: bold;
     text-decoration: none;
@@ -108,7 +109,9 @@
     position: fixed;
     top: 0;
     width: 100%;
+    z-index: 1;
 }
+
 .about{
 	background-color: #3B3B3B;
 	padding-top: 30px;
@@ -126,5 +129,4 @@
 .text p{
     color: white;
     text-align: justify;
-    font-family: "europa", sans-serif;;
 }
